ingresses/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc-ingress
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  spec:
  ingressClassName: nginx
  rules:
  - host: grafana  
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana-svc-ingress
              port: 
                number: 3000
