ingresses/portainer-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-svc-ingress
  namespace: portainer
spec:
  selector:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
spec:
  spec:
  ingressClassName: nginx
  rules:
  - host: portainer  
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: portainer-svc-ingress
              port: 
                number: 9000
